--- a/#sources/catalog.html
+++ b/#sources/catalog.html
@@ -1115,25 +1115,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
+                    <a href="product.html" class="item-product__image">
                       <img src="./img/img01.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1169,7 +1169,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1180,25 +1180,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
-                      <img src="./img/img01.jpg" alt="" />
+                    <a href="product.html" class="item-product__image">
+                      <img src="./img/img02.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1234,7 +1234,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1245,25 +1245,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
+                    <a href="product.html" class="item-product__image">
                       <img src="./img/img01.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1299,7 +1299,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1310,25 +1310,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
-                      <img src="./img/img01.jpg" alt="" />
+                    <a href="product.html" class="item-product__image">
+                      <img src="./img/img02.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1364,7 +1364,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1375,25 +1375,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
+                    <a href="product.html" class="item-product__image">
                       <img src="./img/img01.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1429,7 +1429,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1440,25 +1440,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
-                      <img src="./img/img01.jpg" alt="" />
+                    <a href="product.html" class="item-product__image">
+                      <img src="./img/img02.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1494,7 +1494,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1505,25 +1505,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
+                    <a href="product.html" class="item-product__image">
                       <img src="./img/img01.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1559,7 +1559,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1570,25 +1570,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
-                      <img src="./img/img01.jpg" alt="" />
+                    <a href="product.html" class="item-product__image">
+                      <img src="./img/img02.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1624,7 +1624,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
@@ -1635,25 +1635,25 @@
                 <div class="items-products__column">
                   <div class="item-product">
                     <div class="item-product__labels"></div>
-                    <a href="#" class="item-product__image">
+                    <a href="product.html" class="item-product__image">
                       <img src="./img/img01.jpg" alt="" />
                     </a>
                     <div class="item-product__body">
-                      <a href="#" class="item-product__description">
+                      <a href="product.html" class="item-product__description">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
                       </a>
                       <div class="item-product__footer">
                         <div class="item-product__old-price rub">65 990</div>
-                        <a href="#" class="item-product__add">
+                        <a href="checkout.html" class="item-product__add">
                           <img src="./img/cart_g.png" alt="" />
                         </a>
                         <div class="item-product__price rub">64 990</div>
                       </div>
                     </div>
                     <div class="item-product__hover hover-item-product">
-                      <div class="hover-item-product__title">
+                      <a href="product.html" class="hover-item-product__title">
                         <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                      </div>
+                      </a>
                       <div
                         class="hover-item-product__options options-item-product"
                       >
@@ -1689,7 +1689,7 @@
                           65 990
                         </div>
                         <a
-                          href="#"
+                          href="checkout.html"
                           class="hover-item-product__cart hover-item-product__cart--catalog"
                         ></a>
                         <div class="hover-item-product__price rub">64 990</div>
