--- a/#sources/checkout.html
+++ b/#sources/checkout.html
@@ -857,9 +857,9 @@
                               <option value="1" selected="selected">
                                 Через Сбербанк
                               </option>
-                              <option value="2">По убыванию цены</option>
-                              <option value="3">По возрастанию цены</option>
-                              <option value="4">По популярности</option>
+                              <option value="2">Visa/Mastercard</option>
+                              <option value="3">Ю.Money</option>
+                              <option value="4">Наложенным платежом</option>
                             </select>
                           </div>
                         </div>
@@ -975,11 +975,11 @@
                 <div class="order-checkout__items">
                   <div class="order-checkout__item item-order">
                     <div class="item-order__content">
-                      <a href="#" class="item-order__image">
+                      <a href="product.html" class="item-order__image">
                         <img src="./img/d00.jpg" alt="" />
                       </a>
                       <div class="item-order__body">
-                        <a href="#" class="item-order__title">
+                        <a href="product.html" class="item-order__title">
                           <span>BH Fitness F1 G6414V </span>Беговая дорожка
                         </a>
                         <div class="item-order__price rub">64 990</div>
@@ -1011,11 +1011,11 @@
                   </div>
                   <div class="order-checkout__item item-order">
                     <div class="item-order__content">
-                      <a href="#" class="item-order__image">
+                      <a href="product.html" class="item-order__image">
                         <img src="./img/img01.jpg" alt="" />
                       </a>
                       <div class="item-order__body">
-                        <a href="#" class="item-order__title">
+                        <a href="product.html" class="item-order__title">
                           <span>BH Fitness F1 G6414V </span>Беговая дорожка
                         </a>
                         <div class="item-order__price rub">64 990</div>
