--- a/#sources/product.html
+++ b/#sources/product.html
@@ -1116,7 +1116,7 @@
                     <div class="item-product">
                       <div class="item-product__labels"></div>
                       <a href="#" class="item-product__image">
-                        <img src="./img/img01.jpg" alt="" />
+                        <img src="./img/d00.jpg" alt="" />
                       </a>
                       <div class="item-product__body">
                         <a href="#" class="item-product__description">
@@ -1124,7 +1124,7 @@
                         </a>
                         <div class="item-product__footer">
                           <div class="item-product__old-price rub">65 990</div>
-                          <a href="#" class="item-product__add">
+                          <a href="checkout.html" class="item-product__add">
                             <img src="./img/cart_g.png" alt="" />
                           </a>
                           <div class="item-product__price rub">64 990</div>
@@ -1169,7 +1169,7 @@
                             65 990
                           </div>
                           <a
-                            href="#"
+                            href="checkout.html"
                             class="hover-item-product__cart hover-item-product__cart--catalog"
                           ></a>
                           <div class="hover-item-product__price rub">
@@ -1191,7 +1191,7 @@
                         </a>
                         <div class="item-product__footer">
                           <div class="item-product__old-price rub">65 990</div>
-                          <a href="#" class="item-product__add">
+                          <a href="checkout.html" class="item-product__add">
                             <img src="./img/cart_g.png" alt="" />
                           </a>
                           <div class="item-product__price rub">64 990</div>
@@ -1236,7 +1236,7 @@
                             65 990
                           </div>
                           <a
-                            href="#"
+                            href="checkout.html"
                             class="hover-item-product__cart hover-item-product__cart--catalog"
                           ></a>
                           <div class="hover-item-product__price rub">
@@ -1250,7 +1250,7 @@
                     <div class="item-product">
                       <div class="item-product__labels"></div>
                       <a href="#" class="item-product__image">
-                        <img src="./img/img01.jpg" alt="" />
+                        <img src="./img/img02.jpg" alt="" />
                       </a>
                       <div class="item-product__body">
                         <a href="#" class="item-product__description">
@@ -1258,7 +1258,7 @@
                         </a>
                         <div class="item-product__footer">
                           <div class="item-product__old-price rub">65 990</div>
-                          <a href="#" class="item-product__add">
+                          <a href="checkout.html" class="item-product__add">
                             <img src="./img/cart_g.png" alt="" />
                           </a>
                           <div class="item-product__price rub">64 990</div>
@@ -1303,7 +1303,7 @@
                             65 990
                           </div>
                           <a
-                            href="#"
+                            href="checkout.html"
                             class="hover-item-product__cart hover-item-product__cart--catalog"
                           ></a>
                           <div class="hover-item-product__price rub">
