--- a/#sources/index.html
+++ b/#sources/index.html
@@ -862,18 +862,21 @@
                       <div class="items-products__column">
                         <div class="item-product">
                           <div class="item-product__labels"></div>
-                          <a href="#" class="item-product__image">
-                            <img src="./img/img01.jpg" alt="" />
+                          <a href="product.html" class="item-product__image">
+                            <img src="./img/img02.jpg" alt="" />
                           </a>
                           <div class="item-product__body">
-                            <a href="#" class="item-product__description">
+                            <a
+                              href="product.html"
+                              class="item-product__description"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
                             </a>
                             <div class="item-product__footer">
                               <div class="item-product__old-price rub">
                                 65 990
                               </div>
-                              <a href="#" class="item-product__add">
+                              <a href="checkout.html" class="item-product__add">
                                 <img src="./img/cart_g.png" alt="" />
                               </a>
                               <div class="item-product__price rub">64 990</div>
@@ -914,7 +917,10 @@
                                 </div>
                               </div>
                             </div>
-                            <a href="#" class="hover-item-product__cart"></a>
+                            <a
+                              href="checkout.html"
+                              class="hover-item-product__cart"
+                            ></a>
                             <div class="hover-item-product__footer">
                               <div class="hover-item-product__old-price rub">
                                 65 990
@@ -932,18 +938,21 @@
                       <div class="items-products__column">
                         <div class="item-product">
                           <div class="item-product__labels"></div>
-                          <a href="#" class="item-product__image">
+                          <a href="product.html" class="item-product__image">
                             <img src="./img/img01.jpg" alt="" />
                           </a>
                           <div class="item-product__body">
-                            <a href="#" class="item-product__description">
+                            <a
+                              href="product.html"
+                              class="item-product__description"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
                             </a>
                             <div class="item-product__footer">
                               <div class="item-product__old-price rub">
                                 65 990
                               </div>
-                              <a href="#" class="item-product__add">
+                              <a href="checkout.html" class="item-product__add">
                                 <img src="./img/cart_g.png" alt="" />
                               </a>
                               <div class="item-product__price rub">64 990</div>
@@ -984,7 +993,10 @@
                                 </div>
                               </div>
                             </div>
-                            <a href="#" class="hover-item-product__cart"></a>
+                            <a
+                              href="checkout.html"
+                              class="hover-item-product__cart"
+                            ></a>
                             <div class="hover-item-product__footer">
                               <div class="hover-item-product__old-price rub">
                                 65 990
@@ -1002,18 +1014,21 @@
                       <div class="items-products__column">
                         <div class="item-product">
                           <div class="item-product__labels"></div>
-                          <a href="#" class="item-product__image">
-                            <img src="./img/img01.jpg" alt="" />
+                          <a href="product.html" class="item-product__image">
+                            <img src="./img/img02.jpg" alt="" />
                           </a>
                           <div class="item-product__body">
-                            <a href="#" class="item-product__description">
+                            <a
+                              href="product.html"
+                              class="item-product__description"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
                             </a>
                             <div class="item-product__footer">
                               <div class="item-product__old-price rub">
                                 65 990
                               </div>
-                              <a href="#" class="item-product__add">
+                              <a href="checkout.html" class="item-product__add">
                                 <img src="./img/cart_g.png" alt="" />
                               </a>
                               <div class="item-product__price rub">64 990</div>
@@ -1054,7 +1069,10 @@
                                 </div>
                               </div>
                             </div>
-                            <a href="#" class="hover-item-product__cart"></a>
+                            <a
+                              href="checkout.html"
+                              class="hover-item-product__cart"
+                            ></a>
                             <div class="hover-item-product__footer">
                               <div class="hover-item-product__old-price rub">
                                 65 990
@@ -1072,18 +1090,21 @@
                       <div class="items-products__column">
                         <div class="item-product">
                           <div class="item-product__labels"></div>
-                          <a href="#" class="item-product__image">
+                          <a href="product.html" class="item-product__image">
                             <img src="./img/img01.jpg" alt="" />
                           </a>
                           <div class="item-product__body">
-                            <a href="#" class="item-product__description">
+                            <a
+                              href="product.html"
+                              class="item-product__description"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
                             </a>
                             <div class="item-product__footer">
                               <div class="item-product__old-price rub">
                                 65 990
                               </div>
-                              <a href="#" class="item-product__add">
+                              <a href="checkout.html" class="item-product__add">
                                 <img src="./img/cart_g.png" alt="" />
                               </a>
                               <div class="item-product__price rub">64 990</div>
@@ -1124,7 +1145,10 @@
                                 </div>
                               </div>
                             </div>
-                            <a href="#" class="hover-item-product__cart"></a>
+                            <a
+                              href="checkout.html"
+                              class="hover-item-product__cart"
+                            ></a>
                             <div class="hover-item-product__footer">
                               <div class="hover-item-product__old-price rub">
                                 65 990
@@ -1142,18 +1166,21 @@
                       <div class="items-products__column">
                         <div class="item-product">
                           <div class="item-product__labels"></div>
-                          <a href="#" class="item-product__image">
-                            <img src="./img/img01.jpg" alt="" />
+                          <a href="product.html" class="item-product__image">
+                            <img src="./img/img02.jpg" alt="" />
                           </a>
                           <div class="item-product__body">
-                            <a href="#" class="item-product__description">
+                            <a
+                              href="product.html"
+                              class="item-product__description"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
                             </a>
                             <div class="item-product__footer">
                               <div class="item-product__old-price rub">
                                 65 990
                               </div>
-                              <a href="#" class="item-product__add">
+                              <a href="checkout.html" class="item-product__add">
                                 <img src="./img/cart_g.png" alt="" />
                               </a>
                               <div class="item-product__price rub">64 990</div>
@@ -1194,7 +1221,10 @@
                                 </div>
                               </div>
                             </div>
-                            <a href="#" class="hover-item-product__cart"></a>
+                            <a
+                              href="checkout.html"
+                              class="hover-item-product__cart"
+                            ></a>
                             <div class="hover-item-product__footer">
                               <div class="hover-item-product__old-price rub">
                                 65 990
@@ -1212,18 +1242,21 @@
                       <div class="items-products__column">
                         <div class="item-product">
                           <div class="item-product__labels"></div>
-                          <a href="#" class="item-product__image">
+                          <a href="product.html" class="item-product__image">
                             <img src="./img/img01.jpg" alt="" />
                           </a>
                           <div class="item-product__body">
-                            <a href="#" class="item-product__description">
+                            <a
+                              href="product.html"
+                              class="item-product__description"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
                             </a>
                             <div class="item-product__footer">
                               <div class="item-product__old-price rub">
                                 65 990
                               </div>
-                              <a href="#" class="item-product__add">
+                              <a href="checkout.html" class="item-product__add">
                                 <img src="./img/cart_g.png" alt="" />
                               </a>
                               <div class="item-product__price rub">64 990</div>
@@ -1264,7 +1297,10 @@
                                 </div>
                               </div>
                             </div>
-                            <a href="#" class="hover-item-product__cart"></a>
+                            <a
+                              href="checkout.html"
+                              class="hover-item-product__cart"
+                            ></a>
                             <div class="hover-item-product__footer">
                               <div class="hover-item-product__old-price rub">
                                 65 990
