--- a/#sources/checkout.html
+++ b/#sources/checkout.html
@@ -853,7 +853,7 @@
                         <div class="form-checkout__line">
                           <div class="form-checkout__label">Способ оплаты:</div>
                           <div class="form-checkout__input">
-                            <select name="form[]" class="form">
+                            <select name="form[]" class="checkout">
                               <option value="1" selected="selected">
                                 Через Сбербанк
                               </option>
@@ -1108,8 +1108,6 @@
       @@include("_footer.html")
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-    <!-- <script src="https://maps.google.com/maps/api/js?sensor=false&amp;key="></script> -->
     <script src="./js/script.min.js"></script>
   </body>
 </html>
